Add image analyzing
